# blender-rendering2

./: README.md
OpenGL-POC/: CMakeLists.txt  README.md
OpenGL-POC/Models/: cottage_blender.mtl
OpenGL-POC/src/: blender_rendering.cpp  hello_world.cpp
